# mathmagotchi

./: .gitignore  README.md  character.py  config.py  create_icon.py  gui.py  main.py  mathstack.py  pyproject.toml  quotes.py  requirements.txt
