[project]
name = "mathmagotchi"
version = "0.1.0"
description = "Your friendly mathematical companion - a Tamagotchi-style app for math problems and inspiration"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.1",
    "requests>=2.31.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-pytz>=2024.1",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
